styles/style.css
*,
*::after,
*::before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	outline: transparent;
}
* {
	margin: 0;
	padding: 0;

	font-family: inherit;
	line-height: inherit;
	color: inherit;
}
*::selection {
	color: var(--font-color-for-accent-color);
	background-color: var(--accent-color);
}
*::-moz-selection {
	color: var(--font-color-for-accent-color);
	background-color: var(--accent-color);
}

:root {
	--font-family: 'Poppins', Arial, Helvetica, sans-serif;
	--font-color: #000;
	--font-color-for-accent-color: #fff;

	--accent-color: #664e83;
	--bg-color: #fff;
	--bg-linear-gradient-color-1: rgba(106, 82, 137, 1);
	--bg-linear-gradient-color-2: rgba(127, 166, 192, 1);
	--bg-linear-gradient: linear-gradient(
		to right,
		var(--bg-linear-gradient-color-1),
		var(--bg-linear-gradient-color-2)
	);
	--input-hover-color: rgba(106, 82, 137, 0.4);

	--complete-color: #b4d9f1;
	--error-color: #b30000;

	--border-radius: 0.275rem;
}
@media (prefers-color-scheme: dark) {
	:root {
		--font-color: #fff;
		--font-color-for-accent-color: var(--bg-color);
		--accent-color: #a7cde6;
		--bg-color: #2a2a2a;
	}
}

body {
	font-family: var(--font-family);
	font-weight: 400;
	font-size: 0.9rem;
	font-style: normal;
	line-height: 1.5;
}
@media only screen and (min-width: 900px) {
	body {
		font-size: 1rem;
	}
}

main {
	min-height: 100vh;
	background: var(--bg-linear-gradient);
	padding-bottom: 2rem;
}
main > header {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	gap: 1rem;
	max-width: 100%;
	margin: auto;
	margin-bottom: 2rem;
	padding: 1rem;
	color: var(--font-color);
	background-color: var(--bg-color);
	border-radius: 0 0 0.275rem 0.275rem;
	transition: max-width 250ms ease-in-out;
}

h1 {
	color: var(--font-color);
	font-size: 1.5rem;
	font-weight: 600;
	text-transform: uppercase;
}
header > h2 {
	color: var(--font-color);
}

a {
	color: var(--accent-color);
	text-decoration: none;
}

button {
	cursor: pointer;
}

li {
	list-style: none;
}

hr {
	margin: 1rem 0;
	border: none;
	border-top: 0.1rem solid var(--font-color);
}

.content {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	max-width: 100%;
	margin: auto;
	padding: 1rem;
	background-color: var(--bg-color);
	border-radius: var(--border-radius);
	transition: max-width 250ms ease-in-out;
}
@media only screen and (min-width: 600px) {
	main > header,
	.content {
		max-width: 80%;
	}
	.content {
		padding: 2rem 1rem;
	}
}
@media only screen and (min-width: 1200px) {
	main > header,
	.content {
		max-width: 65%;
	}
	.content {
		padding: 2rem;
	}
}

.content > header {
	position: relative;
	display: flex;
	justify-content: center;
	flex-direction: column;
	color: var(--font-color);
}

.content > section {
	position: relative;
	width: 100%;
	margin: 0 auto;
}

form {
	display: flex;
	flex-direction: column;
	gap: 2rem;
	width: 100%;
	color: var(--font-color);
}

form > fieldset > div {
	display: flex;
	flex-direction: column;
}

form div > * {
	display: block;
	width: 100%;
}

fieldset {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	border: none;
}

label {
	order: -1;
	position: relative;
	font-weight: 600;
	text-transform: uppercase;
}

@media only screen and (min-width: 900px) {
	label {
		font-size: 1rem;
	}
}

input {
	display: block;
	padding: 1rem 0.875rem;
	font-size: 0.875rem;
	background-color: transparent;
	border: 0.1rem solid var(--accent-color);
	border-radius: 0.275rem;
	transition: border 250ms ease-in-out;
}
input:focus-visible,
input:active {
	border: 0.1rem solid var(--accent-color);
}
input:focus-visible + label::before,
input:active + label::before {
	content: '>';
	position: absolute;
	top: 2.4rem;
	left: -1.2rem;
	color: var(--accent-color);
	font-size: 1rem;
}
input:focus-visible + label::after,
input:active + label::after {
	content: '<';
	position: absolute;
	top: 2.4rem;
	right: -1.2rem;
	color: var(--accent-color);
	font-size: 1rem;
}
.content > a,
button[type='submit'] {
	display: block;
	width: fit-content;
	margin: 0 0 0 auto;
	padding: 0.425rem 0.875rem;
	font-size: 0.875rem;
	font-weight: 600;
	text-transform: uppercase;
	white-space: nowrap;
	color: var(--accent-color);
	background-color: var(--bg-color);
	border: 2px solid var(--accent-color);
	border-radius: 0.275rem;
	transition: background-color 250ms ease-in-out, border 250ms ease-in-out;
}
.content > a:hover,
.content > a:focus-visible,
.content > a:active,
button[type='submit']:hover,
button[type='submit']:focus-visible,
button[type='submit']:active {
	color: var(--font-color-for-accent-color);
	background-color: var(--accent-color);
	border: 2px solid transparent;
}

.content section > header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 1.725rem;
}

.content section > header .progress_bar {
	position: relative;
	width: 10rem;
	height: 1.4rem;
	overflow: hidden;
	background-color: #ddd;
	border-radius: var(--border-radius);
}
@media only screen and (min-width: 600px) {
	.content section > header .progress_bar {
		width: 20rem;
	}
}
.content section > header .progress_bar > div {
	position: absolute;
	top: 0;
	left: 0;
	height: 1.6rem;
	background: var(--bg-linear-gradient);
}

.courses {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}
.courses li {
	width: 100%;
	font-size: 0.875rem;
}
.courses li > a,
.courses li > div:first-of-type {
	position: relative;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 1rem 0.875rem;
	color: var(--font-color);
	background-color: transparent;
	border: 0.1rem solid var(--font-color);
	border-radius: 0.275rem;
	transition: background-color 250ms ease-in-out, border 250ms ease-in-out;
}
.courses li > a:hover,
.courses li > a:focus-visible,
.courses li > a:active {
	color: var(--font-color-for-accent-color);
	background-color: var(--accent-color);
	border: 0.1rem solid var(--accent-color);
}
/* ... */

